[gd_scene load_steps=5 format=3 uid="uid://d3qo6mde4ilwb"]

[ext_resource type="Script" path="res://Assets/Scripts/mosquitolho2.gd" id="1_ymr20"]
[ext_resource type="Texture2D" uid="uid://c32cg3kp6hwik" path="res://Assets/Images/mosquitoFerroBolado.png" id="2_q4hkg"]
[ext_resource type="Texture2D" uid="uid://dhpykvpyl76ba" path="res://Assets/Images/Mosquitolhos.png" id="2_tpows"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0s3qd"]
radius = 19.0

[node name="Mosquitolho" type="Area2D"]
position = Vector2(753, 381)
collision_layer = 32
collision_mask = 32
script = ExtResource("1_ymr20")

[node name="Polygon2D" type="Node2D" parent="."]

[node name="MosquitoFerroBolado3" type="Sprite2D" parent="Polygon2D"]
modulate = Color(0.485253, 0.433698, 1, 1)
self_modulate = Color(1, 1, 1, 0.2)
position = Vector2(0, 17)
scale = Vector2(0.2411, 0.2411)
texture = ExtResource("2_q4hkg")

[node name="MosquitoFerroBolado2" type="Sprite2D" parent="Polygon2D"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.2)
position = Vector2(0, 15)
scale = Vector2(0.2411, 0.2411)
texture = ExtResource("2_q4hkg")

[node name="MosquitoFerroBolado" type="Sprite2D" parent="Polygon2D"]
position = Vector2(0, 15)
scale = Vector2(0.228606, 0.228606)
texture = ExtResource("2_q4hkg")

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
position = Vector2(-1, -4)
color = Color(0.71238, 0.83019, 0.811863, 1)
offset = Vector2(21, 14)
texture = ExtResource("2_tpows")
polygon = PackedVector2Array(-39, 14, 15, 6, 14, -27, -25, -54, -59, -19)
uv = PackedVector2Array(220.18, 120.822, 274.18, 112.822, 273.18, 79.8217, 234.18, 52.8217, 200.18, 87.8217)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(33, -7)
target_position = Vector2(-72, 0)
collision_mask = 40
hit_from_inside = true
collide_with_areas = true

[node name="RayLaser" type="RayCast2D" parent="."]
position = Vector2(-2, -7)
target_position = Vector2(1, 6)
hit_from_inside = true
collide_with_areas = true

[node name="Line2D" type="Line2D" parent="RayLaser"]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.945098, 0, 0, 0.737255)

[node name="Rleft" type="RayCast2D" parent="."]
position = Vector2(-9, -7)
target_position = Vector2(-18, 0)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="Rright" type="RayCast2D" parent="."]
position = Vector2(6, -7)
target_position = Vector2(18, 0)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="Rup" type="RayCast2D" parent="."]
position = Vector2(-1, -13)
target_position = Vector2(0, -18)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="Rdown" type="RayCast2D" parent="."]
position = Vector2(-1, -3)
target_position = Vector2(0, 18)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_0s3qd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="justDied" from="." to="." method="_on_just_died"]
